syntax = "proto3";

option go_package = "./";

package Host;

service HostInfo {
  rpc GetHostInfo (HostInfoRequest) returns (CommonReply) {}
}

message HostInfoRequest {
  string data = 1;
}

message CommonReply {
  bool status = 1;
}
